--- a/appserata/firebase.json
+++ b/appserata/firebase.json
@@ -14,6 +14,14 @@
     }
   ],
   "database": {
-    "rules": " "
+    "rules": "database.rules.json"
+  },
+  "hosting": {
+    "public": "public",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ]
   }
 }
