--- a/appserata/.gitignore
+++ b/appserata/.gitignore
@@ -3,6 +3,7 @@ target/
 .mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+/public/js/firebase-init.js
 
 ### STS ###
 .apt_generated
